fixed image input filename text overflow

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,7 +47,6 @@ body {
   
   --xy-controls-button-color: var(--mantine-color-dark-2);
 
-
   --mantine-color-body: var(--mantine-color-dark-7) !important;
   --mantine-color-body-bg: var(--mantine-color-dark-7) !important;
 }
@@ -69,26 +68,6 @@ body {
   right: 0;
 }
 
-.button-like-input {
-  color-scheme: var(--mantine-color-scheme);
-  font-size: var(--mantine-font-size-md);
-  color: var(--mantine-color-text);
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  direction: ltr;
-  user-select: none;
-  cursor: pointer;
-  pointer-events: all;
-  visibility: visible;
-  line-height: var(--mantine-line-height);
-  box-sizing: border-box;
-  position: relative;
-  margin-top: 0rem;
-  margin-bottom: 0rem;
-  border: 1px solid var(--mantine-color-dark-4);
-}
-
 .m_8fb7ebe7:disabled, .m_8fb7ebe7[data-disabled] {
   cursor: text;
 }
@@ -99,10 +78,9 @@ body {
   flex-direction: column;
 }
 
-/* .ReactFlowWrapper {
-  flex-grow: 1;
-  height: 100%;
-} */
+.m_6c018570, .mantine-Input-wrapper, .mantine-FileInput-wrapper {
+  overflow: hidden;
+}
 
 .NodePicker {
   display: flex;
